-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.459 2009-03-30 23:41:25 remko Exp $
-----------------------------------------------------------------------------------------

2009-03-30	remko
	* gmt_init.c (GMT_get_ellipsoid):	When importing ellipsoid file, allow a,0,0;
				a,0,f; a,b,0; or a,b,f as ellipsoid parameters.
				If file does not exist, attempt to read name as a[/[b=|f=]f],
				meaning <semi-major axis>, b=<semi-minor axis>, f=<flattening>,
				or <inverse flattening>.
	* gmt_defaults.txt:	Adjusted accordingly. Also specified SEMI-major/minor axis.
	* gmt.h:		Removed pol_radius from ELLIPSOID structure. Never used.
	* Ellipsoids.txt:	Added Moon and planets (IAU2000).
				Allow 0, b, or 1/f as second ellipsoid parameter.
	* src/GNUmakefile:	Adjusted accordingly.
	* gmt_map.c (GMT_set_spherical):	Take mean radius from CURRENT ellipsoid setting.
				Call GMT_init_ellipsoid again, so also GMT_[K]M_PR_DEG get set.

2009-03-28	pwessel
	* imgsrc/img2google:	Added new script (modified from David Sandwell's prototype)
				that creates Google Earth overlay tiles from topo.11.1.img
	* ps2raster.c:	Enhanced -Wg for KML creation that allows user to specify document
					and layer name and the altitude mode of the image.
					
2009-03-26	pwessel
	* gmt_support.c:	Exceeded array bounds in GMT_read_cpt for hsv conversion.
	* mgd77/mgd77track.c:	Added -Gt|d<gap> to recognize gaps in tracks based on
				distance or time between successive points.
	
2009-03-26	remko
	* configure.ac:		Now looks automatically for ncdump and f2c to guess the
				home directories of netcdf and f2c. This makes it possible
				to just use --enable-netcdf and --enable-f2c without anything
				else. Or leave them off altogether!
	
2009-03-24	pwessel
	* sph:			Introduce new GMT supplement sph which provide GMT-like
				front-ends for Robert Renka's Fortran SSRFPACK and STRIPACK